[package]
name = "shapeshifter"
version = "0.1.0"
edition = "2021"
default-run = "shapeshifter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shapeshifter"
path = "src/lib.rs"

[[bin]]
name = "shapeshifter"
path = "src/bin/shapeshifter.rs"

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"
required-features = ["training"]

[[bin]]
name = "data_transform"
path = "src/bin/data_transform.rs"

[[bin]]
name = "nn"
path = "src/bin/nn.rs"
required-features = ["nn"]

[features]
default = []
prod = ["spl", "mcts_fallback", "tt", "parallel_search"]
spl = []
tt = []
training = []
mcts_fallback = []
parallel_search = []
nn = []

[dependencies]
bitssset = "0.1"
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-log = "0.1"
log-panics = { version = "2", features = ["with-backtrace"] }
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.16"
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.9", features = ["tls-roots"] }
tonic = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_pcg = "0.3"
arrayvec = "0.7"
lazy_static = "1.4"
fxhash = "0.2"
colored = "2"
dfdx = "0.10"
indicatif = "0.17"

[build]
rustflags = "-C target-cpu=native"

[profile.release]
lto = "off"
codegen-units = 1
